maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: ')' expected but '}' found.
      else {(if (random3()==1) {droite()} else {gauche()}}} ; prendBiscuit()
                                                         ^